--- a/css/styles.css
+++ b/css/styles.css
@@ -81,9 +81,9 @@ a {
     margin-top: 20px;
 }
 
-.col-6 {
+/* .col-6 {
     max-width: 440px;
-}
+} */
 
 .p-t-120 {
     padding-top: 120px;
@@ -97,4 +97,28 @@ a {
     width: 440px;
     z-index: 5;
     position: relative;
+}
+
+.card {
+    background-color: red;
+}
+
+.card h2, .card h6 {
+    text-align: center;
+}
+
+.card h2 {
+    color: var(--black);
+}
+
+.bg-red {
+    background-color: red;
+}
+
+.bg-blue {
+    background-color: blue;
+}
+
+.bg-gold {
+    background-color: gold;
 }
